# arielmas.github.io

./: index.html  scripts.js  styles.css
.devcontainer/: devcontainer.json
src/job-market-gov/: Dockerfile  README.md  job-market-api-blog.html  job_listing.py  pyproject.toml  run.sh
src/job-market-gov/job-market-gov/: job_listing.py
src/job-market-gov/job-market-gov/data/: job_category.parquet  locations.parquet
src/laptop-price_pred/: laptop-price-prediction-model.ipynb  pyproject.toml
src/suicide_detector/: classification.html  classification.ipynb  pyproject.toml
src/wildfire-dashboard/: README.md  requirements.txt
src/wildfire-dashboard/pages/: 3_Property_&_Economic_Impact.py  4_Human_Toll:_Injuries_&_Fatalities.py  5_Couses_of_Wildfires_&_Their_Impact.py
src/wildfire-dashboard/wildfire_dashboard/: Hello.py  requirements.txt  wildfire_proc.csv
src/wildfire-dashboard/wildfire_dashboard/pages/: 1_Wildfire_Trends_Over_Time.py  2_Geospatial_Analysis_of_Wildfires.py  3_Property_&_Economic_Impact.py  4_Human_Toll:_Injuries_&_Fatalities.py  5_Couses_of_Wildfires_&_Their_Impact.py
src/wildfire_dashboard/: Hello.py  README.md  preprocess.ipynb  pyproject.toml  wildfire_proc.csv
src/wildfire_dashboard/pages/: 1_Wildfire_Trends_Over_Time.py  2_Geospatial_Analysis_of_Wildfires.py  3_Property_&_Economic_Impact.py  4_Human_Toll:_Injuries_&_Fatalities.py  5_Couses_of_Wildfires_&_Their_Impact.py
src/youtuve-proj/: YouTube_proj.ipynb
