[project]
name = "job-market-gov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-core>=5.7.2",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pretty-jupyter>=2.0.8",
    "psycopg2>=2.9.10",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.1",
]
