[project]
name = "wildfire-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
    "streamlit>=1.42.2",
]
